--- a/ahobic/Gemfile
+++ b/ahobic/Gemfile
@@ -57,3 +57,16 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'devise'
+
+gem 'bootstrap-sass', '~> 3.3.7'
+
+gem 'pry-rails'
+
+gem 'wkhtmltopdf-binary'
+gem 'wicked_pdf'
+
+gem 'kaminari'
+
+gem 'pry-rails'
+
+gem 'jquery-rails'
